--- a/index.html
+++ b/index.html
@@ -1,51 +1,122 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-<nav class="navbar">
-  <a href="#home">Bet Fullstack</a>
-  <div class="dropdown">
-    <button class="dropbtn">Dropdown 
-      <i class="fa fa-caret-down"></i>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">Bet FullStack</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="dropdown-content">
-      <div class="header">
-        <h2>Mega Menu</h2>
-      </div>   
-      <div class="row">
-        <div class="column">
-          <h3>Predictions</h3>
-          <a href="#">Articles</a>
-          <a href="#">Statistic</a>
-          <a href="#">Past Scores</a>
-          <a href="#">Highlights</a>
-        </div>
-        <div class="column">
-          <h3>Rankings</h3>
-          <a href="#">Premier League</a>
-        </div>
-        <div class="column">
-          <h3>Live Betting</h3>
-          <a href="#">Draft Kings</a>
-          <a href="#">FanDuel</a>
-          <a href="#">BetMGM</a>
-        </div>
-      </div>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            Predictions
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="#">Articles</a>
+            <a class="dropdown-item" href="#">Statistics</a>
+            <a class="dropdown-item" href="#">Past Scores</a>
+            <a class="dropdown-item" href="#">Highlights</a>
+          </div>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            Rankings
+          </a>
+          <div class="dropdown-menu menu2" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item"
+              href="https://www.google.com/search?q=premiier+league+ranking&rlz=1C5CHFA_enUS728US728&oq=premiier+league+ranking&aqs=chrome..69i57j0i13l2j0i13i30l2j0i22i30l5.10255j1j4&sourceid=chrome&ie=UTF-8#sie=lg;/g/11j4y8fvpd;2;/m/02_tc;st;fp;1;;">Premier
+              League</a>
+          </div>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            **Live Betting**
+          </a>
+          <div class="dropdown-menu menu3" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item"
+              href="https://sportsbook.draftkings.com/leagues/soccer/53591936?category=game-lines&subcategory=money-line-(regular-time)">DraftKings</a>
+            <a class="dropdown-item" href="https://sportsbook.fanduel.com/sports/navigation/730.1/9976.3">Fanduel</a>
+            <a class="dropdown-item"
+              href="https://sports.nj.betmgm.com/en/sports/football-4/betting/england-14/premier-league-46">BetMGM</a>
+          </div>
+        </li>
+      </ul>
     </div>
-  </div> 
-</nav>
+  </nav>
+  <!--nav bar from getbootstrap.com if you'd like to make changes-->
 
-<div id="container">
-    <div id="box1">What Do The Experts Say?</div>
-    <div id="box2">Highlights From Today</div>
-    <div id="box3">Where To Make Money?</div>
-    <div id="box4">Where To See It Live</div>
-</div>
+  <div class="card" style="width: 100%;">
+    <div class="card-body">
+      <h5 class="card-title">What do experts say?</h5>
+      <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+        content.</p>
+      <a href="#" class="card-link">Card link</a>
+      <a href="#" class="card-link">Another link</a>
+    </div>
+  </div>
+  <div class="card" style="width: 100%;">
+    <div class="card-body">
+      <h5 class="card-title">Highlights from today!!</h5>
+      <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+        content.</p>
+      <a href="#" class="card-link">Card link</a>
+      <a href="#" class="card-link">Another link</a>
+    </div>
+  </div>
+  <div class="card" style="width: 100%;">
+    <div class="card-body">
+      <h5 class="card-title">Where to make money</h5>
+      <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+        content.</p>
+      <a href="#" class="card-link">Card link</a>
+      <a href="#" class="card-link">Another link</a>
+    </div>
+  </div>
+  </div>
+  <div class="card" style="width: 100%;">
+    <div class="card-body">
+      <h5 class="card-title">Where to see it live</h5>
+      <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+        content.</p>
+      <a href="#" class="card-link">Card link</a>
+      <a href="#" class="card-link">Another link</a>
+    </div>
+  </div>
+  <!--cards from getbootstrap.com-->
 
 
+
+
+
+
+
+
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
