repaired a few links

--- a/Index.html
+++ b/Index.html
@@ -99,13 +99,13 @@ src="https://www.youtube.com/watch?v=bLb4VZOzFmg">
           <div class="card"><a href="https://sportsbook.fanduel.com/sports/navigation/730.1/9976.3">Fanduel</a></div>
         </div>
         <div class="column">
-          <div class="card">https://leaguelane.com/english-premier-league/</div>
+          <div class="card"><a href="https://leaguelane.com/english-premier-league/">LeagueLane</a></div>
         </div>
         <div class="column">
-          <div class="card">https://www.freesupertips.com/predictions/premier-league/</div>
+          <div class="card"><a href="https://www.freesupertips.com/predictions/premier-league/">Free Super Tips</a></div>
         </div>
         <div class="column">
-          <div class="card">https://www.bettingexpert.com/football/england/premier-league</div>
+          <div class="card"><a href="https://www.bettingexpert.com/football/england/premier-league">Betting Expert</a></div>
         </div>
       </div>
     </div>
