Wrote JS script to connect to Football Predictions API using Fetch. Use Predictions endpoint to get info on the next upcoming match.

--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <title>Bet Full Stack</title>
 </head>
 
 <body>
@@ -58,7 +59,7 @@
   </nav>
   <!--nav bar from getbootstrap.com if you'd like to make changes-->
   <div class="hero-image">
-    <div class="hero-text">
+    <div id="hero" class="hero-text">
       <h1>Premiere League Season 2020-2021</h1>
       <p>Everything you need to know to win! </p>
       <button>Add matches here?</button>
@@ -86,9 +87,9 @@
   <div class="card" style="width: 100%;">
     <div class="card-body">
       <h5 class="card-title">This week's highlights</h5>
-      <iframe width="420" height="315"
+      <!-- <iframe width="420" height="315"
 src="https://www.youtube.com/watch?v=bLb4VZOzFmg">
-</iframe>
+</iframe> -->
     </div>
   </div>
   <div class="card" style="width: 100%;">
@@ -140,6 +141,7 @@ src="https://www.youtube.com/watch?v=bLb4VZOzFmg">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"></script>
+  <script src="football-api-calls.js"></script>
 </body>
 
 </html>
