--- a/Index.html
+++ b/Index.html
@@ -9,15 +9,15 @@
 
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Bet FullStack</a>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-info">
+    <a class="navbar-brand" href="#"><img src="assets/LogoMakr-58DynD.png"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item dropdown">
+        <li class="nav-item active btn btn-info btn-lg">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
             Predictions
@@ -29,9 +29,10 @@
             <a class="dropdown-item" href="#">Highlights</a>
           </div>
         </li>
-        <li class="nav-item dropdown">
+        <li class="nav-item active btn btn-info btn-lg">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
+            <!--this is where i belive in can change font-->
             Rankings
           </a>
           <div class="dropdown-menu menu2" aria-labelledby="navbarDropdown">
@@ -40,7 +41,7 @@
               League</a>
           </div>
         </li>
-        <li class="nav-item dropdown">
+        <li class="nav-item active btn btn-info btn-lg">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
             **Live Betting**
