updating HTML and CSS..still in progree

--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,8 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -83,7 +85,7 @@
       </div>
     </div>
   </div>
-  <div class="card" style="width: 100%;">
+  <div class="one-card" style="width: 100%;">
     <div class="card-body">
       <h5 class="card-title">This week's highlights</h5>
       <iframe width="420" height="315"
@@ -91,7 +93,7 @@ src="https://www.youtube.com/watch?v=bLb4VZOzFmg">
 </iframe>
     </div>
   </div>
-  <div class="card" style="width: 100%;">
+  <div class="two-card" style="width: 100%;">
     <div class="card-body">
       <h5 class="card-title">Where to make money</h5>
       <div class="row">
@@ -99,20 +101,17 @@ src="https://www.youtube.com/watch?v=bLb4VZOzFmg">
           <div class="card"><a href="https://sportsbook.fanduel.com/sports/navigation/730.1/9976.3">Fanduel</a></div>
         </div>
         <div class="column">
-          <div class="card"><a href="https://leaguelane.com/english-premier-league/">LeagueLane</a></div>
+          <div class="card"><a href="https://sports.nj.betmgm.com/en/sports/football-4/betting/england-14/premier-league-46">BetMGM</a></div>
         </div>
         <div class="column">
-          <div class="card"><a href="https://www.freesupertips.com/predictions/premier-league/">Free Super Tips</a></div>
+          <div class="card"><a href="https://sportsbook.draftkings.com/leagues/soccer/53591936?category=game-lines&subcategory=money-line-(regular-time)">DraftKings</a>
         </div>
-        <div class="column">
-          <div class="card"><a href="https://www.bettingexpert.com/football/england/premier-league">Betting Expert</a></div>
         </div>
       </div>
     </div>
-    </div>
   </div>
-  </div>
-  <div class="card" style="width: 100%;">
+  
+  <div class="three-card" style="width: 100%;">
     <div class="card-body">
       <h5 class="card-title">Where to see it live</h5>
       <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
