repaired glitch in 'dropdown' class which is mandatory with the preset in bootstraap

--- a/Index.html
+++ b/Index.html
@@ -18,7 +18,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active btn btn-info btn-lg">
+        <li class="nav-item dropdown active btn btn-info btn-lg">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
             Predictions
@@ -30,19 +30,19 @@
             <a class="dropdown-item" href="#">Highlights</a>
           </div>
         </li>
-        <li class="nav-item active btn btn-info btn-lg">
+        <li class="nav-item dropdown active btn btn-info btn-lg">
+           <!--this is where you can change button and font-->
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
-            <!--this is where i belive in can change font-->
             Rankings
           </a>
-          <div class="dropdown-menu menu2" aria-labelledby="navbarDropdown">
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item"
               href="https://www.google.com/search?q=premiier+league+ranking&rlz=1C5CHFA_enUS728US728&oq=premiier+league+ranking&aqs=chrome..69i57j0i13l2j0i13i30l2j0i22i30l5.10255j1j4&sourceid=chrome&ie=UTF-8#sie=lg;/g/11j4y8fvpd;2;/m/02_tc;st;fp;1;;">Premier
               League</a>
           </div>
         </li>
-        <li class="nav-item active btn btn-info btn-lg">
+        <li class="nav-item dropdown active btn btn-info btn-lg">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
             **Live Betting**
