added a rivalry card still working on it

--- a/Index.html
+++ b/Index.html
@@ -31,7 +31,7 @@
           </div>
         </li>
         <li class="nav-item dropdown active btn btn-info btn-lg">
-           <!--this is where you can change button and font-->
+          <!--this is where you can change button and font-->
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
             Rankings
@@ -128,6 +128,21 @@
         content.</p>
       <a href="#" class="card-link">Card link</a>
       <a href="#" class="card-link">Another link</a>
+    </div>
+  </div>
+  <div class="card" style="width: 100%;">
+    <div class="card-body">
+      <h5 class="card-title">Rivalry<h5>
+          <h6 class="card-subtitle mb-2 text-muted">liverpool vs Manchester United</h6>
+          <img src="https://resources.premierleague.com/premierleague/badges/50/t14@x2.png" alt="liverpool badge">
+          <img src="https://resources.premierleague.com/premierleague/badges/50/t1@x2.png"
+            alt="manchester united badge">
+          <p class="card-text">The rivalry between Manchester United and Liverpool
+            Each club can claim historical supremacy over the other: United for their 20 league titles to Liverpool's 19
+            and Liverpool for being European champions six times to United's three.</p>
+          <a href="https://www.liverpoolfc.com/" class="card-link">Liverpool homepage</a>
+          <img id="rivalsimg" src="https://images.daznservices.com/di/library/GOAL/c1/9b/liverpool-manchester-united-most-trophies_xq4hoizsmosp1if3a2pu6d6vr.png?t=-1130491380&amp;quality=60&amp;w=1600" alt="rivals holding up cups">
+          <a href="https://www.manutd.com/" class="card-link">Manchester United</a>
     </div>
   </div>
   <!--cards from getbootstrap.com-->
