--- a/index.html
+++ b/index.html
@@ -7,19 +7,22 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+  <title>Bet Full Stack</title>
+
 </head>
 
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Bet FullStack</a>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-info">
+    <a class="navbar-brand" href="#"><img src="assets/LogoMakr-58DynD.png"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item dropdown">
+        <li class="nav-item dropdown active btn btn-info btn-lg">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
             Predictions
@@ -31,18 +34,19 @@
             <a class="dropdown-item" href="#">Highlights</a>
           </div>
         </li>
-        <li class="nav-item dropdown">
+        <li class="nav-item dropdown active btn btn-info btn-lg">
+          <!--this is where you can change button and font-->
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
             Rankings
           </a>
-          <div class="dropdown-menu menu2" aria-labelledby="navbarDropdown">
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item"
               href="https://www.google.com/search?q=premiier+league+ranking&rlz=1C5CHFA_enUS728US728&oq=premiier+league+ranking&aqs=chrome..69i57j0i13l2j0i13i30l2j0i22i30l5.10255j1j4&sourceid=chrome&ie=UTF-8#sie=lg;/g/11j4y8fvpd;2;/m/02_tc;st;fp;1;;">Premier
               League</a>
           </div>
         </li>
-        <li class="nav-item dropdown">
+        <li class="nav-item dropdown active btn btn-info btn-lg">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
             **Live Betting**
@@ -60,27 +64,29 @@
   </nav>
   <!--nav bar from getbootstrap.com if you'd like to make changes-->
   <div class="hero-image">
-    <div class="hero-text">
+    <div id="hero" class="hero-text">
       <h1>Premiere League Season 2020-2021</h1>
-      <p>Everything you need to know to win! </p>
-      <button>Add matches here?</button>
-    </div>
+      </div>
   </div>
   <div class="card" style="width: 100%;">
     <div class="card-body">
       <h5 class="card-title">What do experts say?</h5>
       <div class="row">
         <div class="column">
-          <div class="card"><a href="https://www.forebet.com/en/football-tips-and-predictions-for-england/premier-league">Forebet</a></div>
+          <div class="card"><a
+              href="https://www.forebet.com/en/football-tips-and-predictions-for-england/premier-league">Forebet</a>
+          </div>
         </div>
         <div class="column">
           <div class="card"><a href="https://leaguelane.com/english-premier-league/">LeagueLane</a></div>
         </div>
         <div class="column">
-          <div class="card"><a href="https://www.freesupertips.com/predictions/premier-league/">Free Super Tips</a></div>
+          <div class="card"><a href="https://www.freesupertips.com/predictions/premier-league/">Free Super Tips</a>
+          </div>
         </div>
         <div class="column">
-          <div class="card"><a href="https://www.bettingexpert.com/football/england/premier-league">Betting Expert</a></div>
+          <div class="card"><a href="https://www.bettingexpert.com/football/england/premier-league">Betting Expert</a>
+          </div>
         </div>
       </div>
     </div>
@@ -88,9 +94,9 @@
   <div class="one-card" style="width: 100%;">
     <div class="card-body">
       <h5 class="card-title">This week's highlights</h5>
-      <iframe width="420" height="315"
-src="https://www.youtube.com/watch?v=bLb4VZOzFmg">
-</iframe>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/L6JebqqZbMg" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen></iframe>
     </div>
   </div>
   <div class="two-card" style="width: 100%;">
@@ -105,20 +111,63 @@ src="https://www.youtube.com/watch?v=bLb4VZOzFmg">
         </div>
         <div class="column">
           <div class="card"><a href="https://sportsbook.draftkings.com/leagues/soccer/53591936?category=game-lines&subcategory=money-line-(regular-time)">DraftKings</a>
-        </div>
-        </div>
+      </div>
       </div>
     </div>
   </div>
-  
+</div>
   <div class="three-card" style="width: 100%;">
     <div class="card-body">
       <h5 class="card-title">Where to see it live</h5>
-      <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-        content.</p>
-      <a href="#" class="card-link">Card link</a>
-      <a href="#" class="card-link">Another link</a>
+      <main>
+        <section class="imgtv">
+        <div class="PC">
+        <a href="https://www.peacocktv.com/sports/premier-league?cid=20200620premierleaguepaidsearch610&utm_medium=paid_search_na_searchcopy&utm_campaign=20200620premierleague&utm_content=58700006164329356_44700031696119834&gclsrc=aw.ds&&gclid=Cj0KCQjwutaCBhDfARIsAJHWnHvAJXLIL_33FY2-223q-i09ol80s22g0IbvH58InYOoa8Kj0Lzl2eMaAk1nEALw_wcB">
+            <img src="/Users/christineosmak/bet-fullstack/Peacock.png" 
+         alt="Peacock"/>
+        </section>
+      </main>
+        <main>
+          <section class="imgtv">
+          <div class="NBC">
+        <a href="https://www.nbcsports.com/live/premier-league">
+            <img src="/Users/christineosmak/bet-fullstack/NBCS.png" 
+         alt="NBC Sports"/>
+        </section>
+      </main>
+      <main>
+        <section class="imgtv">
+        <div class="Fubo">
+          <div class="Fubo">
+        <a href="https://www.fubo.tv/lp/watch-premier-league/?title=Watch%20Premier%20League%20on%20NBC%20and%20NBCSN&ftv_campaign=USA-SEM-Sports-Soccer-League-EPL&gclid=Cj0KCQjwutaCBhDfARIsAJHWnHuE-PBN4qPrcLO9cM57C1nHxiNoq2pKQdJwFyF7HO0LsolWKLCdoykaAozvEALw_wcB">
+            <img src="/Users/christineosmak/bet-fullstack/Fubo.png" 
+         alt="Fubo"/>
+        </section>
+      </main>
+      <main>
+        <section class="imgtv">
+        <div class="Sling">
+          <div class="Sling">
+        <a href="https://www.sling.com/programming/sports/soccer">
+            <img src="/Users/christineosmak/bet-fullstack/Sling.png" 
+         alt="Sling"/>
+        </section>
+      </main>
+    </div>
+  </div>
+  <div class="card" style="width: 100%;">
+    <div class="card-body">
+      <h5 class="card-title">Rivalry<h5>
+          <h6 class="card-subtitle mb-2 text-muted">liverpool vs Manchester United</h6>
+          <img src="https://resources.premierleague.com/premierleague/badges/50/t14@x2.png" alt="liverpool badge">
+          <img src="https://resources.premierleague.com/premierleague/badges/50/t1@x2.png"
+            alt="manchester united badge">
+          <p class="card-text">The rivalry between Manchester United and Liverpool
+            Each club can claim historical supremacy over the other: United for their 20 league titles to Liverpool's 19
+            and Liverpool for being European champions six times to United's three.</p>
+          <a href="https://www.liverpoolfc.com/" class="card-link">Liverpool homepage</a>
+          <img id="rivalsimg" src="https://images.daznservices.com/di/library/GOAL/c1/9b/liverpool-manchester-united-most-trophies_xq4hoizsmosp1if3a2pu6d6vr.png?t=-1130491380&amp;quality=60&amp;w=1600" alt="rivals holding up cups">
+          <a href="https://www.manutd.com/" class="card-link">Manchester United</a>
     </div>
   </div>
   <!--cards from getbootstrap.com-->
@@ -139,6 +188,7 @@ src="https://www.youtube.com/watch?v=bLb4VZOzFmg">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"></script>
+  <script src="football-api-calls.js"></script>
 </body>
 
 </html>
