deleted double rivalry reapaied reletive path

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <section class="imgtv">
         <div class="PC">
         <a href="https://www.peacocktv.com/sports/premier-league?cid=20200620premierleaguepaidsearch610&utm_medium=paid_search_na_searchcopy&utm_campaign=20200620premierleague&utm_content=58700006164329356_44700031696119834&gclsrc=aw.ds&&gclid=Cj0KCQjwutaCBhDfARIsAJHWnHvAJXLIL_33FY2-223q-i09ol80s22g0IbvH58InYOoa8Kj0Lzl2eMaAk1nEALw_wcB">
-            <img src="/Users/christineosmak/bet-fullstack/Peacock.png" 
+            <img src="Peacock.png" 
          alt="Peacock"/>
         </section>
       </main>
@@ -137,7 +137,7 @@
           <section class="imgtv">
           <div class="NBC">
         <a href="https://www.nbcsports.com/live/premier-league">
-            <img src="/Users/christineosmak/bet-fullstack/NBCS.png" 
+            <img src="NBCS.png" 
          alt="NBC Sports"/>
         </section>
       </main>
@@ -146,7 +146,7 @@
         <div class="Fubo">
           <div class="Fubo">
         <a href="https://www.fubo.tv/lp/watch-premier-league/?title=Watch%20Premier%20League%20on%20NBC%20and%20NBCSN&ftv_campaign=USA-SEM-Sports-Soccer-League-EPL&gclid=Cj0KCQjwutaCBhDfARIsAJHWnHuE-PBN4qPrcLO9cM57C1nHxiNoq2pKQdJwFyF7HO0LsolWKLCdoykaAozvEALw_wcB">
-            <img src="/Users/christineosmak/bet-fullstack/Fubo.png" 
+            <img src="Fubo.png" 
          alt="Fubo"/>
         </section>
       </main>
@@ -155,25 +155,10 @@
         <div class="Sling">
           <div class="Sling">
         <a href="https://www.sling.com/programming/sports/soccer">
-            <img src="/Users/christineosmak/bet-fullstack/Sling.png" 
+            <img src="Sling.png" 
          alt="Sling"/>
         </section>
       </main>
-    </div>
-  </div>
-  <div class="card" style="width: 100%;">
-    <div class="card-body">
-      <h5 class="card-title">Rivalry<h5>
-          <h6 class="card-subtitle mb-2 text-muted">liverpool vs Manchester United</h6>
-          <img src="https://resources.premierleague.com/premierleague/badges/50/t14@x2.png" alt="liverpool badge">
-          <img src="https://resources.premierleague.com/premierleague/badges/50/t1@x2.png"
-            alt="manchester united badge">
-          <p class="card-text">The rivalry between Manchester United and Liverpool
-            Each club can claim historical supremacy over the other: United for their 20 league titles to Liverpool's 19
-            and Liverpool for being European champions six times to United's three.</p>
-          <a href="https://www.liverpoolfc.com/" class="card-link">Liverpool homepage</a>
-          <img id="rivalsimg" src="https://images.daznservices.com/di/library/GOAL/c1/9b/liverpool-manchester-united-most-trophies_xq4hoizsmosp1if3a2pu6d6vr.png?t=-1130491380&amp;quality=60&amp;w=1600" alt="rivals holding up cups">
-          <a href="https://www.manutd.com/" class="card-link">Manchester United</a>
     </div>
   </div>
   <div class="card" style="width: 100%;">
