start highlights api

--- a/Index.html
+++ b/Index.html
@@ -95,6 +95,12 @@
       <iframe width="560" height="315" src="https://www.youtube.com/embed/L6JebqqZbMg" frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen></iframe>
+        <div class= "soccerapi">
+        <div class="highlight-vids"></div>
+        <div class="match-title"></div>
+        <div class="team1"></div>
+        <div class="team2"></div>
+        </div>
     </div>
   </div>
   <div class="card" style="width: 100%;">
@@ -149,6 +155,7 @@
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"></script>
   <script src="football-api-calls.js"></script>
+  <script src="highlights.js"></script>
 </body>
 
 </html>
