added highlights api ccs styling and some html

--- a/Index.html
+++ b/Index.html
@@ -91,18 +91,17 @@
   </div>
   <div class="card" style="width: 100%;">
     <div class="card-body">
-      <h5 class="card-title">This week's highlights</h5>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/L6JebqqZbMg" frameborder="0"
+      <h5 class="card-title">Premier League highlights</h5>
+      <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/L6JebqqZbMg" frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen></iframe>
+        allowfullscreen></iframe> -->
+        <div id = "videoTarget"></div>
         <div class= "soccerapi">
-        <div class="highlight-vids"></div>
-        <div class="match-title"></div>
-        <div class="team1"></div>
-        <div class="team2"></div>
+          <h5><span class ="team1"></span> vs <span class ="team2"></span></h5>
         </div>
     </div>
   </div>
+  
   <div class="card" style="width: 100%;">
     <div class="card-body">
       <h5 class="card-title">Where to make money</h5>
