--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
 <head>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/assets/css/style.css">
   <title>Bet Full Stack</title>
 
 </head>
@@ -15,7 +14,7 @@
 <body>
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-info">
-    <a class="navbar-brand" href="#"><img id="hlogo" src="assets/LogoMakr-58DynD.png"></a>
+    <a class="navbar-brand" href="#"><img id="hlogo" src="/assets/images/LogoMakr-58DynD.png"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -133,7 +132,7 @@
         <section class="imgtv">
         <div class="PC">
         <a href="https://www.peacocktv.com/sports/premier-league?cid=20200620premierleaguepaidsearch610&utm_medium=paid_search_na_searchcopy&utm_campaign=20200620premierleague&utm_content=58700006164329356_44700031696119834&gclsrc=aw.ds&&gclid=Cj0KCQjwutaCBhDfARIsAJHWnHvAJXLIL_33FY2-223q-i09ol80s22g0IbvH58InYOoa8Kj0Lzl2eMaAk1nEALw_wcB">
-            <img src="Peacock.png" 
+            <img src="/assets/images/Peacock.png" 
          alt="Peacock"/>
         </section>
       </main>
@@ -141,7 +140,7 @@
           <section class="imgtv">
           <div class="NBC">
         <a href="https://www.nbcsports.com/live/premier-league">
-            <img src="NBCS.png" 
+            <img src="/assets/images/NBCS.png" 
          alt="NBC Sports"/>
         </section>
       </main>
@@ -150,7 +149,7 @@
         <div class="Fubo">
           <div class="Fubo">
         <a href="https://www.fubo.tv/lp/watch-premier-league/?title=Watch%20Premier%20League%20on%20NBC%20and%20NBCSN&ftv_campaign=USA-SEM-Sports-Soccer-League-EPL&gclid=Cj0KCQjwutaCBhDfARIsAJHWnHuE-PBN4qPrcLO9cM57C1nHxiNoq2pKQdJwFyF7HO0LsolWKLCdoykaAozvEALw_wcB">
-            <img src="Fubo.png" 
+            <img src="/assets/images/Fubo.png" 
          alt="Fubo"/>
         </section>
       </main>
@@ -159,7 +158,7 @@
         <div class="Sling">
           <div class="Sling">
         <a href="https://www.sling.com/programming/sports/soccer">
-            <img src="Sling.png" 
+            <img src="/assets/images/Sling.png" 
          alt="Sling"/>
         </section>
       </main>
@@ -205,8 +204,8 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"></script>
-  <script src="football-api-calls.js"></script>
-  <script src="highlights.js"></script>
+  <script src="/assets/js/football-api-calls.js"></script>
+  <script src="/assets/js/highlights.js"></script>
 </body>
 
 </html>
