--- a/index.html
+++ b/index.html
@@ -109,57 +109,59 @@
       <h5 class="card-title">Where to make money</h5>
       <div class="row">
         <div class="column">
-          <div class="card"><a href="https://sportsbook.fanduel.com/sports/navigation/730.1/9976.3">Fanduel</a></div>
-        </div>
-        <div class="column">
-          <div class="card"><a
-              href="https://sports.nj.betmgm.com/en/sports/football-4/betting/england-14/premier-league-46">BetMGM</a>
+          <div class="card">
+            <a href="https://sportsbook.fanduel.com/sports/navigation/730.1/9976.3">Fanduel</a>
           </div>
         </div>
         <div class="column">
-          <div class="card"><a href="https://sportsbook.draftkings.com/leagues/soccer/53591936?category=game-lines&subcategory=money-line-(regular-time)">DraftKings</a>
+          <div class="card">
+            <a href="https://sports.nj.betmgm.com/en/sports/football-4/betting/england-14/premier-league-46">BetMGM</a>
+          </div>
+        </div>
+        <div class="column">
+          <div class="card">
+            <a href="https://sportsbook.draftkings.com/leagues/soccer/53591936?category=game-lines&subcategory=money-line-(regular-time)">DraftKings</a>
+          </div>
+        </div> 
+        <div class="column">
+          <div class="card">
+            <a href="https://www.freesupertips.com/predictions/premier-league/">Free Super Tips</a>
+          </div>
+        </div>
       </div>
-      </div>
-    </div>
-    <div class="card"><a href="https://www.freesupertips.com/predictions/premier-league/">Free Super Tips</a>
-    </div>
   </div>
 </div>
   <div class="three-card" style="width: 100%;">
     <div class="card-body">
       <h5 class="card-title">Where to see it live</h5>
-      <main>
+      <main class ="imgtvContainer">
         <section class="imgtv">
-        <div class="PC">
-        <a href="https://www.peacocktv.com/sports/premier-league?cid=20200620premierleaguepaidsearch610&utm_medium=paid_search_na_searchcopy&utm_campaign=20200620premierleague&utm_content=58700006164329356_44700031696119834&gclsrc=aw.ds&&gclid=Cj0KCQjwutaCBhDfARIsAJHWnHvAJXLIL_33FY2-223q-i09ol80s22g0IbvH58InYOoa8Kj0Lzl2eMaAk1nEALw_wcB">
-            <img src="/assets/images/Peacock.png" 
-         alt="Peacock"/>
+          <div class="PC">
+            <a href="https://www.peacocktv.com/sports/premier-league?cid=20200620premierleaguepaidsearch610&utm_medium=paid_search_na_searchcopy&utm_campaign=20200620premierleague&utm_content=58700006164329356_44700031696119834&gclsrc=aw.ds&&gclid=Cj0KCQjwutaCBhDfARIsAJHWnHvAJXLIL_33FY2-223q-i09ol80s22g0IbvH58InYOoa8Kj0Lzl2eMaAk1nEALw_wcB">
+             <img src="/assets/images/Peacock.png" alt="Peacock"/>
+            </a>
+          </div>
         </section>
-      </main>
-        <main>
-          <section class="imgtv">
+        <section class="imgtv">
           <div class="NBC">
-        <a href="https://www.nbcsports.com/live/premier-league">
-            <img src="/assets/images/NBCS.png" 
-         alt="NBC Sports"/>
+            <a href="https://www.nbcsports.com/live/premier-league">
+              <img src="/assets/images/NBCS.png" alt="NBC Sports"/>
+              </a>
+          </div>
         </section>
-      </main>
-      <main>
         <section class="imgtv">
-        <div class="Fubo">
           <div class="Fubo">
-        <a href="https://www.fubo.tv/lp/watch-premier-league/?title=Watch%20Premier%20League%20on%20NBC%20and%20NBCSN&ftv_campaign=USA-SEM-Sports-Soccer-League-EPL&gclid=Cj0KCQjwutaCBhDfARIsAJHWnHuE-PBN4qPrcLO9cM57C1nHxiNoq2pKQdJwFyF7HO0LsolWKLCdoykaAozvEALw_wcB">
-            <img src="/assets/images/Fubo.png" 
-         alt="Fubo"/>
+            <a href="https://www.fubo.tv/lp/watch-premier-league/?title=Watch%20Premier%20League%20on%20NBC%20and%20NBCSN&ftv_campaign=USA-SEM-Sports-Soccer-League-EPL&gclid=Cj0KCQjwutaCBhDfARIsAJHWnHuE-PBN4qPrcLO9cM57C1nHxiNoq2pKQdJwFyF7HO0LsolWKLCdoykaAozvEALw_wcB">
+              <img src="/assets/images/Fubo.png" alt="Fubo"/>
+            </a>
+          </div>
         </section>
-      </main>
-      <main>
         <section class="imgtv">
-        <div class="Sling">
           <div class="Sling">
-        <a href="https://www.sling.com/programming/sports/soccer">
-            <img src="/assets/images/Sling.png" 
-         alt="Sling"/>
+            <a href="https://www.sling.com/programming/sports/soccer">
+             <img src="/assets/images/Sling.png" alt="Sling"/>
+            </a>
+          </div>
         </section>
       </main>
     </div>
